add usb proxy gadget driver

--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -1183,6 +1183,15 @@ config USB_G_WEBCAM
 	  Say "y" to link the driver statically, or "m" to build a
 	  dynamically linked module called "g_webcam".
 
+config USB_G_PROXY
+	tristate "Proxy Gadget (EXPERIMENTAL)"
+	default n
+	help
+	  This option enables a proxy gadget, that forwards transfers to
+	  a USB device.
+	
+	  (FIXME: fill that...)
+
 endchoice
 
 endif # USB_GADGET
